feat: impl todo panel
